--- a/jenkins_pipeline/jenkinsfile
+++ b/jenkins_pipeline/jenkinsfile
@@ -1,1 +1,14 @@
+pipeline {
+  agent {
+    docker { image ' node:16-alpine ' }
+  }
+  stages{
+    stage ('TEST'){
+      steps {
+        sh 'node -- version'
+      }
+    }
+  }
+}
 
+      
