--- a/jenkins_pipeline/jenkinsfile
+++ b/jenkins_pipeline/jenkinsfile
@@ -1,11 +1,16 @@
 pipeline {
   agent {
     docker { image 'node:16-alpine' }
+    docker { image 'nginx:latest' }
   }
   stages {
-    stage('Test') {
+    stage('Build1') {
       steps {
         sh 'node --version'
+      }
+  stage('Build2') {
+      steps {
+        sh 'nginx --version'
       }
     }
   }
