--- a/jenkins_pipeline/jenkinsfile
+++ b/jenkins_pipeline/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
        docker { image 'nginx:latest' }      
       }
       steps {
-        sh 'nginx --version'
+        sh 'nginx -version'
       }
     }
     }
